--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "classnames": "^2.2.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "merge": ">=1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
